src/test/deca/context/invalid/class/double-def-field.deca
// Programme testant la déclaration en double d'un field

class A {
    int i;
    float i;
}